<resources>
    <string name="setting_app_name">asdsad</string>

    <string name="wifi">WiFi</string>
    <string name="wifi_hotspot">WiFi热点</string>
    <string name="network_4g">4G网络</string>
    <string name="mobile_network">移动网络</string>


    <!--add by xioayu 2018 12 17-->
    <string name="hello">Hello World, WIFICrackerActivity!</string>
    <string name="app_name">WIFICracker</string>

    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_none">None</string>

    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>

    <string name="wifi_accesspoint" msgid="6234851776910938957">"WIFI热点"</string>
    <string name="wifi_access_points" msgid="6623468070878623378">"Wi-Fi 网络"</string>
    <string name="wifi_settings_category" msgid="5989698986158534800">"WIFI Cracker"</string>



    <string name="string1">网络</string>
    <string name="string2">WiFi</string>
    <string name="string3">                 请输入密码</string>
    <string name="string4">连接</string>
    <string name="string5">取消</string>
    <string name="string6">正在连接…</string>
    <string name="string7">已连接</string>
    <string name="string8">连接失败</string>
    <string name="string9">确认断开</string>
    <string name="string10">断开后您仍可以重新连接。</string>
    <string name="string11">断开连接</string>
    <string name="string12">热点</string>
    <string name="string13">加密</string>
    <string name="string14">免密</string>
    <string name="string15">热点名称</string>
    <string name="string16">重设</string>
    <string name="string17">热点密码</string>
    <string name="string18">确认</string>
    <string name="string19">已保存</string>
    <string name="string20">热点密码: 无</string>
    <string name="string21">密码长度不够</string>
    <string name="string22">密码长度最低8位</string>
    <string name="string23">关联AP完成</string>
    <string name="string24">正在关联AP...</string>
    <string name="string25">确认删除该热点?</string>
    <string name="string26">热点</string>
    <string name="string27">密码错误</string>
    <string name="string28">刷新</string>
    <string name="string29">正在应用修改，请稍后...</string>

</resources>
