<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">
    <!--布局文件：断开当前连接wifi弹框-->

    <TextView
        android:id="@+id/tv_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string9"
        android:layout_gravity="center"
        android:layout_marginTop="20px"
        android:textSize="20sp"
        android:textColor="@color/black_color"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="40px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/bt_disconnect"
            android:layout_width="180px"
            android:layout_height="60px"
            android:layout_marginLeft="50px"
            android:textSize="20sp"
            android:text="@string/string11"
            android:textColor="@color/dialog_color"
            />

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="180px"
            android:layout_height="60px"
            android:text="@string/string5"
            android:layout_marginLeft="60px"
            android:textSize="20sp"
            android:textColor="@color/dialog_color"
            />

    </LinearLayout>

</LinearLayout>