<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50px"
        android:layout_marginLeft="50px"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string15"
            android:textColor="@color/normal_color"
            />

        <EditText
            android:id="@+id/edt_set_ssid"
            android:layout_width="400px"
            android:layout_height="70px"

            android:textColor="@color/black_color"
            android:textColorHint="@color/gray"
            />
        <!--android:hint="               请设置SSID"-->
    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="30px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_save_ssid"
            android:layout_width="170px"
            android:layout_height="60px"
            android:layout_marginLeft="50px"
            android:text="@string/string18"
            android:textSize="20sp"
            android:textColor="@color/dialog_color"
            />

        <Button
            android:id="@+id/btn_save_ssid_cance"
            android:layout_width="170px"
            android:layout_height="60px"
            android:text="@string/string5"
            android:layout_marginLeft="20px"
            android:textSize="20sp"
            android:textColor="@color/dialog_color"
            />

    </LinearLayout>
</LinearLayout>