<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myc="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--wifi列表-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<!--
            style="@style/ItemMenuViewStyleForSwitch"-->

        <com.adayo.app.settings.ui.view.ItemMenuView
            android:id="@+id/img_wifi_power"
            app:text="@string/string2"
            myc:showSwitchButton="true"
            android:layout_height="100px"
            android:layout_width="match_parent"
            app:textColor="@color/normal_color" />



        <LinearLayout
            android:id="@+id/wifi_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="54px"
            android:orientation="vertical"
            android:visibility="gone">


            <!--"网络" 字样-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80px"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/wifi_internet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/string1"
                    android:textColor="@color/normal_color"
                    android:textSize="26px" />



                <ImageView
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:layout_alignParentRight="true"
                    android:id="@+id/wifi_refresh"
                    android:layout_centerVertical="true"
                    android:scaleType="center"
                    android:src="@drawable/selector_refresh"
                    android:layout_marginRight="65px"/>

                <ImageView
                    android:layout_width="80px"
                    android:layout_height="80px"
                    android:visibility="gone"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:id="@+id/wifi_loading_img"
                    android:layout_marginRight="65px"
                    android:scaleType="center"
                    android:src="@drawable/load" />
                <!--添加圆圈-->
            </RelativeLayout>

            <ListView
                android:id="@+id/lsv_wifi"
                android:divider="@null"
                android:layout_width="match_parent"
                android:layout_height="300px">

            </ListView>

        </LinearLayout>


    </LinearLayout>

    <!--热点-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500px"
        android:id="@+id/ap_part"
        android:orientation="vertical">
        <!--“wifi热点”标题-->

        <com.adayo.app.settings.ui.view.ItemMenuView
            android:id="@+id/img_ap_power"
            myc:showSwitchButton="true"
            android:layout_height="100px"
            android:layout_width="match_parent"
            app:text="@string/string26"
            app:textColor="@color/normal_color" />

        <!--提示语-->
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:id="@+id/wifi_tip"
            android:visibility="gone"
            android:layout_marginTop="113px"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="32px"
                android:src="@drawable/setting_loading"
                android:id="@+id/wifi_loading"
                android:layout_height="32px" />
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/string29"
                android:textColor="@color/normal_color"
                android:textSize="26px"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!--热点功能-->
        <LinearLayout
            android:id="@+id/lin_ap"
            android:layout_width="match_parent"
            android:layout_height="500px"
            android:layout_marginLeft="54px"
            android:orientation="vertical"
            android:visibility="gone">
            <!--"网络"字样-->
            <TextView
                android:id="@+id/wifi_internet1"
                android:layout_width="wrap_content"
                android:layout_height="80px"
                android:text="@string/string1"
                android:gravity="center_vertical"
                android:textColor="@color/normal_color"
                android:textSize="26px" />

            <com.adayo.commonui.tablayout.SegmentTabLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="@dimen/px306"
                android:id="@+id/switch_ap_security_select"
                android:layout_height="@dimen/px64"
                app:tl_bar_color="@color/tl_bar_color"
                app:tl_bar_stroke_color="@color/tl_stoke_color"
                app:tl_bar_stroke_width="@dimen/px2"
                app:tl_indicator_anim_enable="true"
                app:tl_indicator_color="@color/tl_indicator_color"
                app:tl_indicator_margin_bottom="@dimen/px2"
                app:tl_indicator_margin_left="@dimen/px2"
                app:tl_indicator_margin_right="@dimen/px2"
                app:tl_indicator_margin_top="@dimen/px2"
                app:tl_tab_space_equal="true"
                app:tl_textSelectColor="@color/switch_select_color"
                app:tl_textUnselectColor="@color/switch_unselect_color"
                app:tl_bar_background="@drawable/button_bg"
                app:tl_indicator_background="@drawable/button_p"/>




            <!--重置账号-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="49px"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/img_buttton_Setssid"
                    android:layout_width="130px"
                    android:layout_height="54px"
                    android:textSize="24px"
                    android:textColor="@color/again_color"
                    android:background="@drawable/setting_button_bg_p"
                    android:text="@string/string16" />

                <TextView
                    android:id="@+id/tv_ssid"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12px"
                    android:gravity="center_vertical"
                    android:text="@string/string15"
                    android:textColor="@color/normal_color"
                    android:textSize="26px" />

            </LinearLayout>


            <!--重置密码-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="46px"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/img_buttton_SetPass"
                    android:layout_width="130px"
                    android:layout_height="54px"
                    android:textSize="24px"
                    android:textColor="@color/again_color"
                    android:background="@drawable/setting_button_bg_p"
                    android:text="@string/string16" />

                <TextView
                    android:id="@+id/tv_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="12px"
                    android:gravity="center_vertical"
                    android:text="@string/string17"
                    android:textColor="@color/normal_color"
                    android:textSize="26px" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>